Bug 94764 - cannot use mouse in server mouse mode
Summary: cannot use mouse in server mouse mode
Status: RESOLVED FIXED
Alias: None
Product: Spice
Classification: Unclassified
Component: spice-gtk (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Spice Bug List
QA Contact:
URL:
Whiteboard:
Keywords: bisected, regression
Depends on:
Blocks:
 
Reported: 2016-03-31 07:07 UTC by Pavel Grunt
Modified: 2016-05-04 09:32 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Pavel Grunt 2016-03-31 07:07:15 UTC
Connect to a guest which doesn't have spice-vdagent, so it doesn't allow to use the mouse in the client mode (eg fresh installed Windows guest).

Mouse will be ungrabbed automatically upon clicking to the spice-gtk widget.

As Uri pointed out it is a regression since https://cgit.freedesktop.org/spice/spice-gtk/commit/?id=2cb74f4ac1fc5c3601cbc780f7eefa6e867ba4d2
Comment 1 Pavel Grunt 2016-04-01 16:44:34 UTC
Seems that it is related to gtk version.
I can reproduce it with gtk 3.20 (latest Fedora), but I cannot reproduce it with gtk 3.14

Mostlikely is it due to recent changes - removed window from gtkstack and also from spice display widget

Also spice-widget uses gdk_pointer_grab() which is deprecated and gdk_device_grab / gdk_seat_grab should be used.
Comment 2 Marc-Andre Lureau 2016-05-03 11:23:55 UTC
reverting gtk+ 9d0e8401caa937c4399dbe6d2aaa6dc4fe0254eb seem to solve it
Comment 3 Marc-Andre Lureau 2016-05-04 09:32:46 UTC
fixed upstream:
commit 89214eba87d7a0888439dc752619310ece3db920
Author: Marc-André Lureau <marcandre.lureau@gmail.com>
Date:   Tue May 3 19:32:31 2016 +0200

    gtk: fix server-mode mouse


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.