gtk: fix server-mode mouse

Since switching to gtkstack, server-side mouse mode has some issues with
grabs. There seems to be some grab gtk+ issue, but it seems to fall
under the API user responsability to have its own window when dealing
with pointer grabs. And gtk+ commit 9d0e8401c (Turn stack into no-window
widget) made things worse.

Making the widget an eventbox solves the grab issue.

Fixes:
https://bugs.freedesktop.org/show_bug.cgi?id=94764

Signed-off-by: Marc-André Lureau <marcandre.lureau@gmail.com>
Acked-by: Pavel Grunt <pgrunt@redhat.com>